// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`чистит данные НЕ переименованного 1`] = `
Object {
  "no": Object {},
}
`;

exports[`чистит данные переименованного 1`] = `
Object {
  "name_entity": Object {},
}
`;
